k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: ingress-user-service
                port:
                  number: 5000
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: ingress-order-service
                port:
                  number: 5001
