k8s/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: routing
spec:
  hosts:
    - "*"
  gateways:
    - front-end-gateway
  http:
    - match:
        - uri:
            prefix: "/api/orders"
      rewrite:
        uri: "/orders"
      route:
        - destination:
            host: order-service-service.default.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            prefix: "/api/users"
      rewrite:
        uri: "/users"
      route:
        - destination:
            host: user-service-service.default.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: front-end-service.default.svc.cluster.local
            port:
              number: 81
